Prevent header tabs crashing into time-details when too narrow.

--- a/client/ctrls/tr-header-tab/tr-header-tab.styl
+++ b/client/ctrls/tr-header-tab/tr-header-tab.styl
@@ -14,3 +14,5 @@
   cursor pointer
   height 100%
 
+  @media $WIDTH_NORMAL
+    width 120px
